@@ -1,6 +1,5 @@
 # Test that orphan reloc sections are placed before .rela.plt even when
-# .rela.plt is the only reloc section.  Also tests that orphan non-alloc
-# reloc sections go after alloc sections.
+# .rela.plt is the only reloc section.
 
 #source: reloc.s
 #ld: -shared -z nocombreloc
@@ -11,6 +10,4 @@
 .*\.relaplatypus.*
 #...
 .*\.rela\.plt.*
-#...
-.*\.relaechidna.*
 #pass
